--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-.htaccess
-/config.php
-admin/config.php
-
-!index.html
-
 download/
 image/data/
 image/cache/
 system/cache/
 system/logs/
+
+*.java~
+*.js~
+*.class~
+*.g4~
+*~
+/.project
